debugged wrong letters being guessed and added multiple times

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
       <!-- this is were the answer goes -->
       <div id="word-goes-here"></div>
-      <p id="lose-text"></p>
+      <p id="lose-text">wrongletters:</p>
       <div class="row">
         <div class="img-container col-12" id="img-container">
           <img src="assets/img/corvette.webp" />
