attached pictures to carObject array

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       </div>
       <!-- this is were the answer goes -->
       <div id="word-goes-here"></div>
-      <p id="lose-text">wrongletters:</p>
+      <p id="lose-text">Guessed Letters:</p>
+      <p id="lives-text">Lives left:10</p>
       <div class="row">
         <div class="img-container col-12" id="img-container">
           <img src="assets/img/corvette.webp" />
