--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <!-- this is were the answer goes -->
       <div id="word-goes-here"></div>
       <p id="lose-text">Guessed Letters:</p>
-      <p id="lives-text">Lives left:10</p>
+      <p id="guesses-text">Guesses Left: 10</p>
       <div class="row">
         <div class="img-container col-12" id="img-container">
           <img src="assets/img/corvette.webp" />
