made an array, only one letter guessed

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
       <!-- this is were the answer goes -->
       <div id="word-goes-here"></div>
-      <p id="lose-text">Guessed Letters:</p>
+      <p>Guessed Letters:<span id="lose-text"></span></p>
       <p id="guesses-text">Guesses Left: 10</p>
       <div class="row">
         <div class="img-container col-12" id="img-container">
