tried to make a guesses left counter

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       </div>
       <!-- this is were the answer goes -->
       <div id="word-goes-here"></div>
-      <p>Guessed Letters:<span id="lose-text"></span></p>
-      <p id="guesses-text">Guesses Left: 10</p>
+      <p>Guessed Letters: <span id="lose-text"></span></p>
+      <p>Guesses Left: <span id="guesses-text"></p>
       <div class="row">
         <div class="img-container col-12" id="img-container">
           <img src="assets/img/corvette.webp" />
