--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
         </div>
       </div>
       <!-- this is were the answer goes -->
+      <div class="gameContent">
       <div id="word-goes-here"></div>
       <p>Guessed Letters: <span id="lose-text"></span></p>
       <p>Guesses Left: <span id="guesses-text"></p>
-      <div class="row">
+      <div class="row"></div>
         <div class="img-container col-12" id="img-container">
           <img src="assets/img/corvette.webp" />
         </div>
